# FFmpegDemos

./: .gitignore  README.md
decodedemo/: CMakeLists.txt  demuxing_decoding.cpp  demuxing_decoding.h  main.cpp  scaling_video.cpp
decodedemo/decodecomponent/: CMakeLists.txt  decodecomponent.cpp  decodecomponent.h
decodedemo/decodecomponent/exportinclude/: decoderinterface.h
examples/: CMakeLists.txt  README.md
examples/demuxing_decoding/: CMakeLists.txt  README.md  demuxing_decoding.c
examples/encode_video/: CMakeLists.txt  README.md
examples/filtering_video/: CMakeLists.txt  filtering_video.c
examples/filtering_video_sharedmemory/: CMakeLists.txt  README.md  filtering_video.c
examples/muxing/: CMakeLists.txt  README.md
examples/scaling_video/: CMakeLists.txt
